// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline math custom delimiters does not render default delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 37,
              "line": 1,
              "offset": 36,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2+b^2=c^2$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 37,
      "line": 1,
      "offset": 36,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math custom delimiters renders inline math delimited by custom delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 43,
              "line": 1,
              "offset": 42,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before !!a^2 + b^2 = c^2!! text after",
        },
      ],
      "position": {
        "end": {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders alone 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$",
        },
        {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "inlineCode",
          "value": "a^2+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "type": "text",
          "value": "$",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders at beginning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$",
        },
        {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "inlineCode",
          "value": "a^2+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "type": "text",
          "value": "$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders at end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $",
        },
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "inlineCode",
          "value": "a^2+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
          },
          "type": "text",
          "value": "$",
        },
      ],
      "position": {
        "end": {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders surrounded by text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $",
        },
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "inlineCode",
          "value": "a^2+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
          },
          "type": "text",
          "value": "$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 39,
          "line": 1,
          "offset": 38,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 39,
      "line": 1,
      "offset": 38,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders with inside leading space 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $",
        },
        {
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "inlineCode",
          "value": " a^2+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
          },
          "type": "text",
          "value": "$",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters renders with inside trailing space 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $",
        },
        {
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "inlineCode",
          "value": "a^2+b^2=c^2 ",
        },
        {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
          },
          "type": "text",
          "value": "$",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-backtick delimiters sanitizes HTML inside 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $",
        },
        {
          "position": {
            "end": {
              "column": 58,
              "line": 1,
              "offset": 57,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "inlineCode",
          "value": "a^2<script>alert('hello')</script>+b^2=c^2",
        },
        {
          "position": {
            "end": {
              "column": 70,
              "line": 1,
              "offset": 69,
            },
            "start": {
              "column": 58,
              "line": 1,
              "offset": 57,
            },
          },
          "type": "text",
          "value": "$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 70,
          "line": 1,
          "offset": 69,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 70,
      "line": 1,
      "offset": 69,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with inside leading space 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $ a^2+b^2=c^2$",
        },
      ],
      "position": {
        "end": {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with inside leading space 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$ a^2+b^2=c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with inside trailing space 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2+b^2=c^2 $",
        },
      ],
      "position": {
        "end": {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with inside trailing space 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$a^2+b^2=c^2 $$",
        },
      ],
      "position": {
        "end": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with newline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 17,
              "line": 2,
              "offset": 37,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2+b^2
=c^2$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 2,
          "offset": 37,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 17,
      "line": 2,
      "offset": 37,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters does not render with newline 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 39,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$a^2+b^2
=c^2$$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 2,
          "offset": 39,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 18,
      "line": 2,
      "offset": 39,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders alone 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$a^2+b^2=c^2$",
        },
      ],
      "position": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders alone 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$$a^2+b^2=c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders at beginning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$a^2+b^2=c^2$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders at beginning 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "$$a^2+b^2=c^2$$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders at end 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2+b^2=c^2$",
        },
      ],
      "position": {
        "end": {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders at end 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$a^2+b^2=c^2$$",
        },
      ],
      "position": {
        "end": {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders surrounded by text 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 37,
              "line": 1,
              "offset": 36,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2+b^2=c^2$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 37,
      "line": 1,
      "offset": 36,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters renders surrounded by text 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$a^2+b^2=c^2$$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 39,
          "line": 1,
          "offset": 38,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 39,
      "line": 1,
      "offset": 38,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters sanitizes HTML inside 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $a^2",
        },
        {
          "position": {
            "end": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "type": "html",
          "value": "<script>",
        },
        {
          "position": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "alert('hello')",
        },
        {
          "position": {
            "end": {
              "column": 48,
              "line": 1,
              "offset": 47,
            },
            "start": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
          },
          "type": "html",
          "value": "</script>",
        },
        {
          "position": {
            "end": {
              "column": 68,
              "line": 1,
              "offset": 67,
            },
            "start": {
              "column": 48,
              "line": 1,
              "offset": 47,
            },
          },
          "type": "text",
          "value": "+b^2=c^2$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 68,
          "line": 1,
          "offset": 67,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 68,
      "line": 1,
      "offset": 67,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`inline math default dollar-sign delimiters sanitizes HTML inside 2`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "text before $$a^2",
        },
        {
          "position": {
            "end": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "start": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
          },
          "type": "html",
          "value": "<script>",
        },
        {
          "position": {
            "end": {
              "column": 40,
              "line": 1,
              "offset": 39,
            },
            "start": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
          },
          "type": "text",
          "value": "alert('hello')",
        },
        {
          "position": {
            "end": {
              "column": 49,
              "line": 1,
              "offset": 48,
            },
            "start": {
              "column": 40,
              "line": 1,
              "offset": 39,
            },
          },
          "type": "html",
          "value": "</script>",
        },
        {
          "position": {
            "end": {
              "column": 70,
              "line": 1,
              "offset": 69,
            },
            "start": {
              "column": 49,
              "line": 1,
              "offset": 48,
            },
          },
          "type": "text",
          "value": "+b^2=c^2$$ text after",
        },
      ],
      "position": {
        "end": {
          "column": 70,
          "line": 1,
          "offset": 69,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 70,
      "line": 1,
      "offset": 69,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
